--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="item" v-for="item in items | more showed">
           <div class="thumb" v-thumb="item.featured_media" v-show="item.featured_media"></div>
 
-          <h3><a href="{{item.link}}" target="_blank" class="title">{{item.title.rendered}}</a></h3>
+          <h3><a href="{{item.link}}" target="_blank" class="title"><span v-html="item.title.rendered"</span></a></h3>
           <div class="date"><p>{{item.date | formatDate}}</p></div>
           <div class="desc"><p>{{{item.excerpt.rendered | removeMoreLink}}}</p></div>
         </div>
